--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -9,9 +9,10 @@ body {
     color: #191919;
     font-family: "Public Sans",Arial,sans-serif;
     line-height: 1.25;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
+    /* display: flex;
+    flex-direction: column; */
 }
 
 
