--- a/app/static/styles/filebrowser.css
+++ b/app/static/styles/filebrowser.css
@@ -3,7 +3,6 @@
     width: 75%;
     height: 100%;
     float: left;
-    overflow: scroll;
 }
 
 .left-panel .document {
@@ -61,7 +60,6 @@
     bottom: 0px;
     left: 0;
     width: 100%;
-    overflow: scroll;
     height: calc(100%);
     backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
         -webkit-backdrop-filter: blur(10px); /* For Safari compatibility */
@@ -75,7 +73,6 @@
     width: 25%;
     height: 100%;
     float: left;
-    overflow: scroll;
     padding-top: 15px;
     padding-bottom: 120px;
     box-shadow: -7px 20px 25px -16px rgb(211, 211, 211);
@@ -156,7 +153,6 @@
   bottom: 80px;
   right: 0;
   width: 40%;
-  overflow: scroll;
   height: calc(100% - 165px);
   backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
       -webkit-backdrop-filter: blur(10px); /* For Safari compatibility */
